# url-oxidizer

./: Cargo.toml  LICENSE  README.md  Rocket.toml
input/: url-map.json  url-map.sqlite  url-map.yaml
migrations/2023-10-25-000607_create_url_map_table/: down.sql  up.sql
src/: from_sql.rs  main.rs  schema.rs
