[package]
name = "url-oxidizer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
html-node = "0.4"
serde_yaml = "0.9"
diesel = { version = "2", features = ["sqlite"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.3"
features = ["diesel_sqlite_pool"]

[[bin]]
name = "url-oxidizer-from-file"
path = "src/from_file.rs"

[[bin]]
name = "url-oxidizer-from-sql"
path = "src/from_sql.rs"

